Wed Nov 11 14:57:15 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Network_Adapters_Test and SOCK_Dgram_Bcast_Test on LynxOS.

Wed Nov 11 13:49:11 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Added ACE_HAS_SIGISMEMBER_BUG.

Wed Nov 11 12:07:36 UTC 2009  Olli Savia  <ops@iki.fi>

        * bin/fuzz.pl:
          Added strsignal to functions that is checked
          for the lack of ACE_OS.

Wed Nov 11 11:45:23 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.h:
          Doxygen updates.

Wed Nov 11 11:36:26 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.inl:
        * ace/config-lynxos.h:
        * ace/os_include/os_signal.h:
        * configure.ac:
        * m4/config_h.m4:
        * m4/platform.m4:
          Renamed ACE_HAS_LYNXOS_SIGNALS to ACE_HAS_LYNXOS4_SIGNALS.

Wed Nov 11 09:36:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended Id check to detect Id:

Wed Nov 11 03:07:32 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Add support for building 32 bits.

Tue Nov 10 21:03:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/sets-manager.py:

          bugfix for windows.  note that cleaning up the temp directory doesn't
          work on windows, that will need to be done by hand.

Tue Nov 10 12:17:33  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check for hardcoded timeouts, thanks to Chad for assisting with this

Tue Nov 10 12:10:33  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          ACE_RUN_VX_TGTHOST shouldn't be used in a test script

Tue Nov 10 06:31:33  2009  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue_T.cpp (enqueue_*): When enqueuing blocks, grab the
          notifier pointer before releasing the guard; check it and do any