@@ -22,7 +22,6 @@
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
 #include "ace/Default_Constants.h"
-#include "ace/OS_NS_fcntl.h"
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
